fixed an issue on larger screens not showing a navigation menu

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -28,7 +28,7 @@ header {
     position: fixed;
     z-index: 99;
     width: 100%;
-    box-shadow: 0 2px 2px #3a3a3a;
+    box-shadow: 0 4px 4px rgba(178,188,177,255);
     display: flex;
     justify-content: space-between;
     align-items: baseline;
